<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button2"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="84dp"
        android:onClick="onClick"
        android:text="@string/button2"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:onClick="onClick"
        android:text="@string/button"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button8"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/button8"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/playerTurnTxtView"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button6"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:onClick="onClick"
        android:text="@string/button6"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="4dp"
        android:onClick="onClick"
        android:text="@string/button5"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button7"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/button7"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/playerTurnTxtView"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.003"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button9"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/button9"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/playerTurnTxtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        android:onClick="onClick"
        android:text="@string/button3"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button1"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:onClick="onClick"
        android:text="@string/button1"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/newGame"
        android:layout_width="335dp"
        android:layout_height="66dp"
        android:layout_marginBottom="60dp"
        android:onClick="onClick"
        android:text="@string/newGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/playerTurnTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Player X's Turn"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/newGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintVertical_bias="0.407" />

</androidx.constraintlayout.widget.ConstraintLayout>